# board-games

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_old.cpp
include/: board.h  color.h  eqp.h  exceptions.h  figure.h  position.h
include/figure/: checkers.h  chess.h
libs/gtest-1.12.1/: CMakeLists.txt
src/: board.cpp  eqp.cpp  figure.cpp  main.cpp  position.cpp
src/figure/: checkers.cpp  chess.cpp
test/: CMakeLists.txt  test.cpp
